feat(jobs): adicionar padrão de construtor e rastreamento de métricas de execução
- Implementar padrão de construtor para EstatisticasJobDto e ResultadoLoteria
- Adicionar rastreamento de tempo de execução para jobs
- Melhorar a análise de parâmetros no QuartzJobExecutor
- Adicionar campos de execução em tempo real ao JobR2dbc
- Refatorar a inicialização de métricas no JobService